--- a/project-manager.html
+++ b/project-manager.html
@@ -40,10 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://pcmcanada.applytojob.com/apply/x5EToew7ZZ/IT-Project-Manager-ERP-Contract'>IT Project Manager - ERP (Contract) - PCM Canada - Career Page</a></h5> 
+<p><span class="badge badge-light">Canada Canada  Vancouver, Canada  Canada</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://mercycorps69469.recruiterbox.com/jobs/fk03iyj/'>
     Project Manager at Mercycorps69469
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Jordan</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://oyorooms.recruiterbox.com/jobs/fk03o3w'>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.talkdesk.com/careers/td/lisbon/engineering/summer-internship-1915407?gh_jid=1915407'>Project Manager Professional Services  [Lehi] - Careers | Talkdesk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/lisbon/engineering/summer-internship-1915407?gh_jid=1915407'>Project Manager Professional Services  [Lehi] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -238,11 +242,11 @@
 <p><span class="badge badge-light">Austin Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/adara/22d03cf7-ab3a-49bb-be30-50d539aa4946'>ADARA - Technical Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/adara/22d03cf7-ab3a-49bb-be30-50d539aa4946'>ADARA - Technical Project Manager</a></h5> 
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://shijigroup.join.com/jobs/469341-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/469341-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -340,7 +344,7 @@
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.ucf.edu/en-us/job/497708/technical-program-manager-bridg'>Jobs at UCF- Details - Technical Program Manager - BRIDG</a></h5> 
+<h5><a href='https://jobs.ucf.edu/en-us/job/497708/technical-program-manager-bridg'>Jobs at UCF- Details - Technical Program Manager - BRIDG</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -352,7 +356,7 @@
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://kargo.applytojob.com/apply/VqRGhv49o3/Technical-Project-Manager'>Technical Project Manager - Kargo - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://kargo.applytojob.com/apply/VqRGhv49o3/Technical-Project-Manager'>Technical Project Manager - Kargo - Career Page</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -455,12 +459,6 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <hr/>
 <h5><a href='https://owow1.recruitee.com/o/assistant-project-manager-oakland'>
       Assistant Project Manager - oWOW
-    </a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://owow1.recruitee.com/o/construction-project-manager-oakland'>
-      Construction Project Manager - oWOW
     </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
